feature(restaurants) users can view all restaurants - list restaurants - pagination

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div>
-  <h1>{{title}}</h1>
-  <div class="content"><span>restaurants-angular app is running!</span></div>
+  <div class="container">
+        <app-nav></app-nav>
+        <app-restaurants></app-restaurants>
+  </div>
+
 </div>
