--- a/src/app/components/restaurant-item/restaurant-item.component.html
+++ b/src/app/components/restaurant-item/restaurant-item.component.html
@@ -1,7 +1,10 @@
 <div class="row my-4 mx-1 restaurant-item">
   <div class="col-12 bg-white px-0">
     <div class="r-card d-flex b-radius">
-      <div class="img-container d-inline-block">
+      <div class="img-container d-none d-sm-inline-block">
+        <img src={{imgUrl}} alt="">
+      </div>
+      <div class="mobile-img-container d-sm-none d-inline-block">
         <img src={{imgUrl}} alt="">
       </div>
       <div class="home-detail flex-fill">
