--- a/src/app/components/restaurant-items/restaurant-items.component.html
+++ b/src/app/components/restaurant-items/restaurant-items.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-  <div class="col-10">
+  <div class="col-12 col-md-10">
     <app-restaurant-item
       *ngFor="let restaurant of restaurants; index as pos"
       [restaurant]= "restaurant"
