--- a/src/app/components/restaurant-paginator/restaurant-paginator.component.html
+++ b/src/app/components/restaurant-paginator/restaurant-paginator.component.html
@@ -1,7 +1,7 @@
 <nav aria-label="Page navigation">
   <ul class="pagination justify-content-center">
     <li class="page-item {{prevActive}}">
-      <a class="page-link" href="#!" (click)="onClick(this.prev)" tabindex="-1" aria-label="Previous">
+      <a class="page-link nav-link" (click)="onClick(this.prev)" tabindex="-1" aria-label="Previous">
         <span aria-hidden="true">&laquo;</span>
         <span class="sr-only">Previous</span>
       </a>
@@ -10,18 +10,18 @@
       <ng-container *ngIf="page+1 === current; else inactive">
         <li
           class="page-item active">
-          <a class="page-link" href="">{{page+1}}</a>
+          <a class="page-link nav-link">{{page+1}}</a>
         </li>
       </ng-container>
       <ng-template #inactive>
        <li class="page-item">
-         <a class="page-link" href="" (click)="onClick(page+1)">{{page+1}}</a>
+         <a class="page-link nav-link" (click)="onClick(page+1)">{{page+1}}</a>
        </li>
       </ng-template>
     </ng-container>
 
     <li class="page-item {{nextActive}}">
-      <a class="page-link" href="" (click)="onClick(this.next)"  aria-label="Next">
+      <a class="page-link nav-link" (click)="onClick(this.next)"  aria-label="Next">
         <span aria-hidden="true">&raquo;</span>
         <span class="sr-only">Next</span>
       </a>
