feature(restaurant): view restaurant detail
- view restaurant details
- view restaurant schedule

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div>
   <div class="container">
         <app-nav></app-nav>
-        <app-restaurants></app-restaurants>
+        <router-outlet></router-outlet>
   </div>
 
 </div>
