--- a/src/app/components/filters/filters.component.scss
+++ b/src/app/components/filters/filters.component.scss
@@ -30,6 +30,11 @@
     }
   }
 }
+
+.c-pointer {
+  cursor: pointer;
+}
+
 .btn-glow {
   box-shadow: 0 0.75rem 1.5rem rgba(44,123,229,.2) !important;
 }
