--- a/src/app/components/filters/filters.component.html
+++ b/src/app/components/filters/filters.component.html
@@ -11,14 +11,14 @@
     <div class="filters d-flex justify-content-around">
       <div class="filter-item filter-dropdown align-items-start">
         <div class="dropdown show main-menu">
-          <a class="btn btn-white dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" [ngClass]="setActiveFilterClass()">
+          <a class="btn btn-white dropdown-toggle c-pointer" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" [ngClass]="setActiveFilterClass()">
             {{filterText}}
           </a>
 
           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <a class="dropdown-item filter-element" href="#" (click)="onFilterClick('', '', '', 'Any time')">Any time</a>
-            <a class="dropdown-item filter-element" href="#" (click)="onFilterClick('True', '', '', 'Open')">Open now</a>
-            <a class="dropdown-item filter-element" href="#" (click)="onFilterClick('False', '', '', 'Closed')">Closed now</a>
+            <a class="dropdown-item filter-element c-pointer" (click)="onFilterClick('', '', '', 'Any time')">Any time</a>
+            <a class="dropdown-item filter-element c-pointer" (click)="onFilterClick('True', '', '', 'Open')">Open now</a>
+            <a class="dropdown-item filter-element c-pointer" (click)="onFilterClick('False', '', '', 'Closed')">Closed now</a>
             <div class="dropdown-divider"></div>
             <a class="filter-element dropdown-item f-weekday" *ngFor="let day of weekdays; index as i;" (mouseenter)="onFilterHover(i)"
             (mouseleave)="onFilterHoverOff(i)"
