--- a/src/app/components/restaurant-item/restaurant-item.component.html
+++ b/src/app/components/restaurant-item/restaurant-item.component.html
@@ -1,6 +1,6 @@
 <div class="row my-4 mx-1 restaurant-item">
   <div class="col-12 bg-white px-0">
-    <div class="r-card d-flex b-radius">
+    <div class="r-card d-flex b-radius" (click)="restaurantClick(restaurant)">
       <div class="img-container d-none d-sm-inline-block">
         <img src={{imgUrl}} alt="">
       </div>
