--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,3 +1,3 @@
 <nav class="navbar navbar-light bg-faded-blue px-0">
-  <a class="h1 text-darker-red" href="#">Restaurants</a>
+  <a class="h1 text-darker-red h-link" routerLink="/">Restaurants</a>
 </nav>
