--- a/src/app/components/restaurant-detail/restaurant-detail.component.html
+++ b/src/app/components/restaurant-detail/restaurant-detail.component.html
@@ -1,21 +1,37 @@
 <div class="row mx-1 justify-content-center">
   <div class="col-12 col-md-10 restaurant-detail p-0" *ngIf = "loading == false">
     <div class="detail-image">
+      <a class="btn btn-primary btn-back" routerLink="/">Back</a>
       <img src="{{imgUrl}}" alt="">
     </div>
     <div class="row p-5">
       <div class="col-12 col-md-6">
         <h3>{{restaurant.name}}</h3>
-        <div class="status">
+
+        <app-view-rating [rating]="restaurant.rating_average"></app-view-rating>
+        <span class="review-summary">{{restaurant.review_count}} ratings</span>
+        <hr>
+        <div class="status py-1">
           <span [ngClass]="setClass()" class="status-icon"></span>
           <span class="status-name">{{status}}</span>
         </div>
+        <div class="reviews pt-1 pb-4">
+          <span class="review-icon">
+            <fa-icon [icon]="faCommentAlt"></fa-icon>
+          </span>
+          <span class="review-name">{{restaurant.review_count}} Review(s)</span>
+        </div>
+        <app-submit-ratings
+          [restaurant]= "restaurant"
+          (refreshDetail)="refreshDetail($event)">
+        </app-submit-ratings>
+
       </div>
-      <div class="col-12 col-md-6">
-        <table class="table table-striped table-sm table-primary">
+      <div class="col-12 col-md-6 ">
+        <table class="table table-striped table-sm table-primary mt-2">
           <thead>
             <tr>
-              <th scope="col" colspan="2">Hours</th>
+              <th scope="col" colspan="2">Open Hours</th>
             </tr>
           </thead>
           <tbody>
@@ -27,6 +43,7 @@
         </table>
       </div>
     </div>
+    <app-view-reviews [reviews]="restaurant.reviews"></app-view-reviews>
   </div>
   <ngx-loading [show]="loading"></ngx-loading>
 </div>
