bug(filters): fix filter errors
- fix unmatching filter inputs

--- a/src/app/components/restaurant-detail/restaurant-detail.component.html
+++ b/src/app/components/restaurant-detail/restaurant-detail.component.html
@@ -23,7 +23,7 @@
         </div>
         <app-submit-ratings
           [restaurant]= "restaurant"
-          (refreshDetail)="refreshDetail($event)">
+          (refreshDetail)="refreshDetail()">
         </app-submit-ratings>
 
       </div>
