--- a/src/app/components/filters/filters.component.html
+++ b/src/app/components/filters/filters.component.html
@@ -25,7 +25,7 @@
              id={{i}}> <div (click)="onFilterClick('', i+1, '', day)" class="">{{day}}</div>
               <ul class="sub-menu" [ngClass]="setSuperSubClasses()">
                 <li class="filter-sub-element"
-                (click)="onFilterClick('', i+1, day)" id="{{i}}{{x}}"><span>Any Time</span></li>
+                (click)="onFilterClick('', i+1, '', day)" id="{{i}}{{'x'}}"><span>Any Time</span></li>
                 <li class="filter-sub-element" *ngFor="let hour of hours; index as j;" (click)="onFilterClick('', i+1, hour+':00', day+' '+hour)" id="{{i}}{{j}}"><span>{{hour}} </span></li>
               </ul>
             </a>
