--- a/src/app/components/restaurant-item/restaurant-item.component.html
+++ b/src/app/components/restaurant-item/restaurant-item.component.html
@@ -15,9 +15,9 @@
               [rating]="restaurant.rating_average">
             </app-view-rating>
           </div>
-          <span class="review-summary r-margin">{{restaurant.review_count}} reviews</span>
+          <span class="review-summary r-margin"> {{restaurant.review_count}} raviews</span>
         </div>
-        <div class="status my-1">
+        <div class="status mb-1">
           <span [ngClass]="setClass()" class="status-icon"></span>
           <span class="status-name">{{status}}</span>
         </div>
