--- a/src/app/components/submit-ratings/submit-ratings.component.scss
+++ b/src/app/components/submit-ratings/submit-ratings.component.scss
@@ -9,3 +9,11 @@
 .m-style {
   background-color: $faded-blue;
 }
+
+.review-area {
+  border: 1px solid #E3EBF6;
+}
+
+.border-c {
+  border: .1px solid #E3EBF6;
+}
