feature(pagination): add pagination page overview.

--- a/src/app/components/restaurant-items/restaurant-items.component.html
+++ b/src/app/components/restaurant-items/restaurant-items.component.html
@@ -21,6 +21,7 @@
       *ngIf="response.count !== 0;"
       [pageCount]= "pageCount"
       [current]= "current"
+      [totalRestaurants]= "response.count"
       (newDestination)="newDestination($event)"
       >
     </app-restaurant-paginator>
