--- a/src/app/components/restaurant-paginator/restaurant-paginator.component.html
+++ b/src/app/components/restaurant-paginator/restaurant-paginator.component.html
@@ -1,30 +1,35 @@
-<nav aria-label="Page navigation">
-  <ul class="pagination justify-content-center">
-    <li class="page-item {{prevActive}}">
-      <a class="page-link nav-link" (click)="onClick(this.prev)" tabindex="-1" aria-label="Previous">
-        <span aria-hidden="true">&laquo;</span>
-        <span class="sr-only">Previous</span>
-      </a>
-    </li>
-    <ng-container *ngFor="let page of pages">
-      <ng-container *ngIf="page+1 === current; else inactive">
-        <li
-          class="page-item active">
-          <a class="page-link nav-link">{{page+1}}</a>
-        </li>
+<div class="row justify-content-center">
+  <div class="col-12 text-center pb-3 text-muted">
+    {{this.shownStart}}-{{this.shownEnd}} of {{totalRestaurants}}
+  </div>
+  <nav aria-label="Page navigation">
+    <ul class="pagination justify-content-center">
+      <li class="page-item {{prevActive}}">
+        <a class="page-link nav-link" (click)="onClick(this.prev)" tabindex="-1" aria-label="Previous">
+          <span aria-hidden="true">&laquo;</span>
+          <span class="sr-only">Previous</span>
+        </a>
+      </li>
+      <ng-container *ngFor="let page of pages">
+        <ng-container *ngIf="page+1 === current; else inactive">
+          <li
+            class="page-item active">
+            <a class="page-link nav-link">{{page+1}}</a>
+          </li>
+        </ng-container>
+        <ng-template #inactive>
+         <li class="page-item">
+           <a class="page-link nav-link" (click)="onClick(page+1)">{{page+1}}</a>
+         </li>
+        </ng-template>
       </ng-container>
-      <ng-template #inactive>
-       <li class="page-item">
-         <a class="page-link nav-link" (click)="onClick(page+1)">{{page+1}}</a>
-       </li>
-      </ng-template>
-    </ng-container>
 
-    <li class="page-item {{nextActive}}">
-      <a class="page-link nav-link" (click)="onClick(this.next)"  aria-label="Next">
-        <span aria-hidden="true">&raquo;</span>
-        <span class="sr-only">Next</span>
-      </a>
-    </li>
-  </ul>
-</nav>
+      <li class="page-item {{nextActive}}">
+        <a class="page-link nav-link" (click)="onClick(this.next)"  aria-label="Next">
+          <span aria-hidden="true">&raquo;</span>
+          <span class="sr-only">Next</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
+</div>
