--- a/src/app/components/restaurant-item/restaurant-item.component.scss
+++ b/src/app/components/restaurant-item/restaurant-item.component.scss
@@ -70,6 +70,7 @@
             display: inline-block;
             vertical-align: middle;
             font-weight: lighter;
+            font-size: 15px;
           }
         }
         .status-icon {
@@ -95,6 +96,8 @@
             display: inline-block;
             vertical-align: middle;
             font-weight: lighter;
+            font-size: 15px;
+            padding-left: 2.5px;
           }
 
           .review-icon {
