--- a/src/app/components/restaurant-detail/restaurant-detail.component.scss
+++ b/src/app/components/restaurant-detail/restaurant-detail.component.scss
@@ -35,6 +35,7 @@
       display: inline-block;
       vertical-align: middle;
       font-weight: lighter;
+      font-size: 15px;
     }
   }
 
@@ -66,6 +67,8 @@
       display: inline-block;
       vertical-align: middle;
       font-weight: lighter;
+      font-size: 15px;
+      padding-left: 2.5px;
     }
 
     .review-icon {
