--- a/src/app/components/view-reviews/view-reviews.component.html
+++ b/src/app/components/view-reviews/view-reviews.component.html
@@ -9,8 +9,8 @@
             Anonymous
           </div>
           <div class="col-12">
-            <div class="text-small text-muted">{{review.rating}} <i class="fa fa-star"></i> • Reviewed on {{reviewDate(review.created)}}</div>
-            <div class="pt-1">
+            <div class="text-small text-info">{{review.rating}}.0 <i class="fa fa-star"></i> • Reviewed on {{reviewDate(review.created)}}</div>
+            <div class="pt-1 px-1 px-md-5 text-secondary comment-container">
               {{review.review}}
             </div>
           </div>
