--- a/src/app/components/restaurant-detail/restaurant-detail.component.html
+++ b/src/app/components/restaurant-detail/restaurant-detail.component.html
@@ -27,7 +27,7 @@
         </app-submit-ratings>
 
       </div>
-      <div class="col-12 col-md-6 ">
+      <div class="col-12 col-md-6 b-radius">
         <table class="table table-striped table-sm table-primary mt-2">
           <thead>
             <tr>
