--- a/src/app/components/view-reviews/view-reviews.component.html
+++ b/src/app/components/view-reviews/view-reviews.component.html
@@ -2,7 +2,7 @@
   <div class="col-12">
     <h4>Reviews</h4>
     <hr>
-    <div *ngIf="reviews.length > 1; else noReviews">
+    <div *ngIf="reviews.length > 0; else noReviews">
       <div *ngFor="let review of reviews;">
         <div class="row">
           <div class="col text-bold">
@@ -10,7 +10,7 @@
           </div>
           <div class="col-12">
             <div class="text-small text-info">{{review.rating}}.0 <i class="fa fa-star"></i> • Reviewed on {{reviewDate(review.created)}}</div>
-            <div class="pt-1 px-1 px-md-5 text-secondary comment-container">
+            <div class="py-1 px-1 px-md-5 text-secondary comment-container">
               {{review.review}}
             </div>
           </div>
