--- a/src/app/components/restaurant-detail/restaurant-detail.component.scss
+++ b/src/app/components/restaurant-detail/restaurant-detail.component.scss
@@ -1,5 +1,22 @@
 @import './../../../_variables.scss';
 
+.hazina-modal {
+  background-color: transparent;
+  .modal-content {
+    background-color: transparent;
+    border: 0;
+    .modal-body {
+      background-color: transparent;
+      border: 0;
+      .row{
+        background-color: transparent;
+        margin: 0;
+      }
+      padding: 0;
+      border-radius: .25rem;
+    }
+  }
+}
 .restaurant-detail {
   background-color: white;
   border-radius: $border-radius;
