--- a/src/app/components/restaurant-detail/restaurant-detail.component.html
+++ b/src/app/components/restaurant-detail/restaurant-detail.component.html
@@ -23,6 +23,7 @@
         </div>
         <app-submit-ratings
           [restaurant]= "restaurant"
+          [redeemed]= "redeemed"
           (refreshDetail)="refreshDetail()">
         </app-submit-ratings>
 
